# weldform_gpusph

./: .gitignore  CMakeLists.txt  Compression  Poiseuille  README.md  error.txt
options/: DamBreak3D.gen.cc  Poiseuille.gen.cc  catalyst_select.opt  chrono_select.opt  compute_select.opt  fastmath_select.opt  git_info.opt  gpusph_version.opt  hdf5_select.opt  linearization_select.opt  make_show.opt  mpi_select.opt
scripts/: list-cuda-cc
src/: .CMakeLists.txt.swp  CMakeLists.txt  GPUWorker.cc  describe-debugflags.h  parse-debugflags.h  physparams.h  simparams.h
src/cuda/: CMakeLists.txt  buildneibs.cu  buildneibs_kernel.cu  cudasimframework.cu  euler.cu  euler_kernel.def  euler_params.h  forces.cu  forces_kernel.cu  forces_kernel.def  forces_params.h  sa_bc_params.h  stress.h
src/geometries/: CMakeLists.txt
src/problems/: Compression.cu  Compression.h
